--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.33.0",
     "@headlessui/react": "^2.2.8",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.13",
