--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint"
@@ -11,12 +11,17 @@
   "dependencies": {
     "@clerk/nextjs": "^6.33.0",
     "@headlessui/react": "^2.2.8",
+    "@sanity/image-url": "^1.2.0",
+    "@sanity/vision": "^4.10.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.13",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
+    "next-sanity": "^11.4.2-canary.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "sanity": "^4.10.1",
+    "styled-components": "^6.1.19",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
